[package]
name = "trade-log-contracts"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yft-service-sdk = { tag = "0.1.0", git = "https://github.com/ITYFT/yft-service-sdk.git", features = [
    "my-service-bus",
    "macros",
] }
prost = "*"
prost-types = "*"
