[package]
name = "trade-log-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
trade-log-contracts = {path = "../trade-log-contracts"}
service-sdk = { tag = "0.2.4", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-service-bus",
] }

lazy_static = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
serde = "*"
serde_json = "*"
