[package]
name = "trade-log-core"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
trade-log-contracts = { path = "../trade-log-contracts" }
yft-service-sdk = { tag = "0.1.0", git = "https://github.com/ITYFT/yft-service-sdk.git", features = [
    "my-service-bus",
] }

lazy_static = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
serde = "*"
serde_json = "*"
