[package]
name = "trade-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

trade-log-core = { path = "../trade-log-core" }
trade-log-macros = { path = "../trade-log-macros" }
trade-log-contracts = { path = "../trade-log-contracts" }
service-sdk = { tag = "0.2.3", git = "https://github.com/MyJetTools/service-sdk.git" }
tokio = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
