[package]
name = "yft-trade-log"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

trade-log-core = { path = "../trade-log-core" }
trade-log-macros = { path = "../trade-log-macros" }
trade-log-contracts = { path = "../trade-log-contracts" }
yft-service-sdk = { git = "https://github.com/ITYFT/yft-service-sdk.git", tag = "0.1.0" }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
